# Core-Memory-Analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Memory.h  Scanner.h
src/: Memory.cpp  Scanner.cpp
